--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ pycparser==2.21
 pydub==0.25.1
 pynormalize==0.1.4
 pyparsing==3.0.9
-pysptk==0.1.21
+# pysptk==0.1.21
 python-dateutil==2.8.2
 python-speech-features==0.6
 pytorch-lightning==1.2.5
