--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ cycler==0.11.0
 Cython==0.29.32
 decorator==5.1.1
 einops==0.3.0
-face-alignment==1.3.5
+face-alignment
 ffmpeg==1.4
 fonttools==4.38.0
 frozenlist==1.3.1
@@ -35,7 +35,7 @@ joblib==1.2.0
 kiwisolver==1.4.4
 librosa==0.9.2
 llvmlite==0.39.1
-lpips==0.1.4
+lpips
 Markdown==3.4.1
 MarkupSafe==2.1.1
 matplotlib==3.5.3
@@ -64,7 +64,7 @@ pyparsing==3.0.9
 # pysptk==0.1.21
 python-dateutil==2.8.2
 python-speech-features==0.6
-pytorch-lightning==1.2.5
+pytorch-lightning
 pytz==2022.5
 PyWavelets==1.3.0
 pyworld==0.3.1
@@ -73,7 +73,7 @@ regex==2022.9.13
 requests==2.28.1
 requests-oauthlib==1.3.1
 resampy==0.4.2
-Resemblyzer==0.1.1.dev0
+Resemblyzer
 rsa==4.9
 scenedetect==0.6.0.3
 scikit-image==0.19.3
@@ -89,13 +89,13 @@ tensorboard==2.10.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorboardX==2.5.1
-test-tube==0.7.5
+test-tube
 threadpoolctl==3.1.0
 tifffile==2021.11.2
-torch==1.10.0
-torchaudio==0.10.0
-torchmetrics==0.10.0
-torchvision==0.11.0
+torch
+torchaudio
+torchmetrics
+torchvision
 tqdm==4.64.1
 typing==3.7.4.3
 typing_extensions
